use http.Handle() to match url path

--- a/web/index.html
+++ b/web/index.html
@@ -6,7 +6,7 @@
 		charset="utf-8">
 	<title>archive-proxy</title>
 	<meta name="viewport" content="width=device-width">
-	<link rel="stylesheet" href="index.css">
+	<link rel="stylesheet" href="static/index.css">
 </head>
 
 <body>
@@ -100,7 +100,7 @@
 
 	</div>
 
-	<script type="text/javascript" src="index.js"></script>
+	<script type="text/javascript" src="static/index.js"></script>
 </body>
 
 </html>
