archive-proxy ui

--- a/web/index.html
+++ b/web/index.html
@@ -26,7 +26,7 @@
 			<li>
 				<label>
 					<span class="form-label">Paste a URL</span>
-					<input type="text" id="url-input">
+					<input type="text" id="url-input" onchange="clearFiles()">
 				</label>
 			</li>
 			<li id="encoding-item">
@@ -99,7 +99,7 @@
 
 
 	</div>
-
+	<script type="text/javascript" src="static/StreamSaver.js"></script>
 	<script type="text/javascript" src="static/index.js"></script>
 </body>
 
